# python-practice

./: .gitignore  Pipfile  README.MD  README.md  pyproject.toml
.github/workflows/: main.yml
src/constant/: Constant.py
src/domain/: Color.py  Human.py
tests/: fizzBuzz.py  test_business_month_begin.py  test_create_set.py  test_deepdiff.py  test_dict.py  test_enum.py  test_fixture.py  test_fizzBuzz.py  test_jsondiff.py  test_months.py  test_raise.py
tests/flaky/: e2e.py  no_flaky.py
