[project]
name = "python-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hirotoKirimaru", email = "nainaistar@gmail.com" }
]
dependencies = [
    "holidays>=0.50",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jsondiff>=2.0.0",
    "deepdiff>=7.0.1",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_practice"]
